ch3 characterise finish

--- a/dissertation_main.tex
+++ b/dissertation_main.tex
@@ -21,6 +21,7 @@
 % TODO insert black page between title and abstract
 \input{./tex/abstract}§
 %\maketitle
+\setcounter{tocdepth}{1}
 \tableofcontents
 \pagebreak
 % \listoffigures
