--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -9,6 +9,7 @@ Since the increase of bandwidth and connectivity to the web as well as prolifera
 
 % Textual data: Whereas textual data can be searched relatively easily because of its symbolic nature, this is more difficult for video. Because visual data on it's own provides little machine-readable handles to search for, repositories of multimedia content need to be indexed with symbolic labels to enable search and retrieval. 
 
+we present an interface that uses implicit user feedback in the form of attention time captured during the presentation of two video segments in parallel. We use the interaction data thus acquired for make predictions of global interest in parts of videos and propose a framework for attention-based filtering of video content. Besides the implicit acquisition of users' attentional data, the framework is able to reconfigure segmented content based on analyses of the data.
 
 % difficult
 
