--- a/tex/main/evaluation.tex
+++ b/tex/main/evaluation.tex
@@ -113,6 +113,13 @@ Data returned from the capturing of attentional behaviour in the parallel player
 \subsection{Attention-based filtering} % (fold)
 \label{sub:attention_based_filtering}
 
+\begin{figure}[htbp]
+  \centering
+    \includegraphics[width=\textwidth]{img/focus_selection}
+  \caption{Video parts considered for filtering}
+  \label{fig:focus_selection}
+\end{figure}
+
 % subsection attention_based_filtering (end)
 
 % subsection reconfiguration (end)
