--- a/tex/main/future.tex
+++ b/tex/main/future.tex
@@ -12,3 +12,7 @@ Creations thus constructed will embody an interesting aspect of collective creat
 In its current version the system uses aggregate counts for the time a user focussed on a particular sub-clips. Since the interactive player is set up to capture users' focus every 100 milliseconds, this could also become the resolution of recording. That way each video parts would have $length/\delta$ time bins in a interest histogram.
 
 % more videos in parallel!!!
+
+% discussion
+
+``In particular, the results indicate that users may differ substantially from one another with respect to display time behavior, and that any single user’s display time behavior may differ substantially according to the task leading to the information-seeking behavior.''\cite{Kelly:2004tq}
